# CRHands

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  config.json  files.cmake
CRHands/: CMakeLists.txt  files.cmake
CRHands/config/: DeviceConfiguration.xml  DynamicModuleConfiguration.xml  SystemConfiguration.xml
CRHands/config/1.CHIC_MOCAP/: DeviceConfiguration.xml  DynamicModuleConfiguration.xml  SystemConfiguration.xml
CRHands/config/2.LEAP/: DeviceConfiguration.xml  SystemConfiguration.xml
CRHands/config/3.UNIST_MOCAP/: DeviceConfiguration.xml  DynamicModuleConfiguration.xml  SystemConfiguration.xml
CRHands/config/panda3d/: Config.prc
CRHands/config/panda3d/render_pipeline/: pipeline.yaml  plugins.yaml
CRHands/config/panda3d/render_pipeline-mono/: plugins.yaml  stages.yaml
CRHands/config/panda3d/render_pipeline-vr/: plugins.yaml
CRHands/resources/hand_mocap/parameters/: mech-1.json  mech-16.json  mech-2.json  mech-3.json  mech-6.json
CRHands/resources/models/Ikea_Lisabo_table/: Ikea_Lisabo_table.bam
CRHands/resources/models/hands/: PhysicsInteractorIndex_full_new_left.txt  PhysicsInteractorIndex_full_new_right.txt  hand.egg
CRHands/resources/models/jewelry/: jewelry_bottom.egg  jewelry_bottom_physics.egg  jewelry_top.egg  jewelry_top_physics.egg
CRHands/src/: impl.h  local_user.cpp  local_user.hpp  main.cpp  main.hpp  user.cpp  user.hpp
CRHands/src/hand/: hand.cpp  hand.hpp  hand_hand_mocap.cpp  hand_leap.cpp  hand_leap.hpp  hand_listener.cpp  hand_manager.cpp  hand_manager.hpp  hand_unist_mocap.cpp
CRHands/src/main_gui/: hand_mocap_gui.cpp  main_gui.cpp  main_gui.hpp
CRHands/src/object/: base_object.cpp  jewelry.cpp  jewelry.hpp  soma_cube.cpp  twisty_puzzle.cpp  twisty_puzzle.hpp
CRHands/src/util/: math.cpp
config-templates/1.CHIC_MOCAP/: DynamicModuleConfiguration.xml
config-templates/3.UNIST_MOCAP/: DynamicModuleConfiguration.xml
config-templates/panda3d/render_pipeline/: plugins.yaml
config-templates/panda3d/render_pipeline-mono/: plugins.yaml
config/1.CHIC_MOCAP/: DynamicModuleConfiguration.xml  SystemConfiguration.xml
config/2.LEAP/: DynamicModuleConfiguration.xml
config/3.UNIST_MOCAP/: DeviceConfiguration.xml
config/panda3d/render_pipeline-mono/: pipeline.yaml  plugins.yaml  stages.yaml
resources/fonts/nanum-gothic-coding/: License.txt
resources/models/hands/: PhysicsInteractorIndex_full_new.txt
src/: main.cpp  main.hpp
src/hand/: hand_listener.cpp  hand_manager.cpp  hand_manager.hpp  hand_unist_mocap.cpp
src/main_gui/: main_gui.cpp  main_gui.hpp
src/object/: soma_cube.cpp
src/util/: math.hpp
